[tool.poetry]
name = "fastapi-mail"
version = "1.2.6"
description = "Simple lightweight mail library for FastApi"
authors = ["Sabuhi Shukurov <sabuhi.shukurov@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sabuhish/fastapi-mail"
repository = "https://github.com/sabuhish/fastapi-mail"

[tool.poetry.dependencies]
python = "^3.10.0"
blinker = "^1.5"
starlette = ">=0.24,<1.0"  # caret behaviour on 0.x is to lock to 0.x.*
aiosmtplib = "^3.0.2"
pydantic-settings = "^2.6.1"
flake8 = "^7.3.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
redis = "^6.4.0"
mkdocs-material = "^9.6.22"
uvicorn = "^0.37.0"
cryptography = "^46.0.3"
httpx = "^0.28.1"
typing-extensions = "^4.15.0"
jinja2 = "^3.1.6"
pytest-mock = "^3.15.1"
pydantic = "^2.12.2"
email-validator = "^2.3.0"

[tool.poetry.extras]
httpx = ["httpx"]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
pytest-cov = ">=4,<8"
mkdocs = "^1.2"
mkdocs-markdownextradata-plugin = "^0.2"
isort = "^5.9"
mypy = "^1.4"
typed-ast = "^1.4"
regex = "2022.7.9"
fakeredis = "^2.0"
fastapi = "^0.100"
types-redis = "^4.3.21"
black = "^22.3"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
py_version=39
skip_glob = [".github/*", ".venv/*", "venv/*", ".vscode/*"]
skip = [".gitignore", ".md", ".yaml", ".yml", ".lock",".toml"]

