[tool.poetry]
name = "fastapi-mail"
version = "1.2.6"
description = "Simple lightweight mail library for FastApi"
authors = ["Sabuhi Shukurov <sabuhi.shukurov@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sabuhish/fastapi-mail"
repository = "https://github.com/sabuhish/fastapi-mail"

[tool.poetry.dependencies]
python = "^3.10.0"
starlette = ">=0.24,<1.0"  # caret behaviour on 0.x is to lock to 0.x.*
pydantic-settings = "^2.6.1"
redis = "^6.4.0"
cryptography = "^46.0.3"
httpx = "^0.28.1"
typing-extensions = "^4.15.0"
jinja2 = "^3.1.6"
pydantic = "^2.12.2"
email-validator = "^2.3.0"
regex = "^2025.9.18"
aiosmtplib = "^4.0.2"
blinker = "^1.9.0"

[tool.poetry.extras]
httpx = ["httpx"]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
mkdocs-material = "^9.6.22"
fakeredis = "^2.32.0"
isort = "^7.0.0"
fastapi = "^0.119.0"
uvicorn = ">=0.37,<0.39"
mkdocs = "^1.2"
mkdocs-markdownextradata-plugin = "^0.2"
mypy = "^1.4"
types-redis = "^4.3.21"
pytest-cov = "^7.0.0"
black = "^25.9.0"
pytest-mock = "^3.15.1"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
py_version=39
skip_glob = [".github/*", ".venv/*", "venv/*", ".vscode/*"]
skip = [".gitignore", ".md", ".yaml", ".yml", ".lock",".toml"]

